[project]
name = "rocky-mountain-power-home-assistant"
version = "0.1.0"
description = "Home Assistant integration for Rocky Mountain Power using Playwright"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "python-dotenv>=1.0",
    "arrow>=1.3",
    "playwright>=1.49",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
