[project]
name = "rocky-mountain-power-home-assistant"
version = "0.1.0"
description = "Home Assistant integration for Rocky Mountain Power energy data"
requires-python = ">=3.13"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-homeassistant-custom-component",
    "python-dotenv>=1.0",
    "arrow>=1.3",
    "fastapi>=0.115",
    "httpx>=0.28",
    "playwright>=1.49",
    "uvicorn>=0.34",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
